plang/testing/logs/false-incorrect/112/program112.p.p
pUi5 dY.


c4 (X97BF) VJQ VNk7 :- u fabhn.
yI53 (h Mb0P (hi (sSjD R7taf (Q9))) (NoxHe) (cjrT rw)) (DZS6) SjBw :- uJod cPK4D (gT (usHTL) (n (x (kj vcG3Q n68w2 fsi5l (JEHF)) BeNj (UD) (gq7 F2O3 (CV6Yf)))) (DzTD3) (IA)) (sB (XR)).


iJF1 S m (ZYx).

? (((tUPtF (TC)))); n6qx (wRM a (zhj (O9JH) (URq4) rmwt Nrg8) (iH Y (qQ) (O) (Pb)) Jrkal) a gM9bX; (uikN (cFO (C) (fvqB) (NEK6) F) (CbqeE)), is (HY) (zJDNq aS (Y)) (U); bbRSe (ug AxZ) Lgb; idJ (coh (kG5L (aVu H p1nK) DN) (nC)), xq F; kuKS oRE; zE HR75t (HFNQ) Xr63.
